# facet

./: .gitignore  PLAN.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: generate-icon.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  secrets.rs  settings.rs
src-tauri/src/ai/: anthropic.rs  mod.rs
src-tauri/src/tools/: base64.rs  case_convert.rs  color.rs  hash.rs  json.rs  json_escape.rs  json_sort.rs  json_to_ts.rs  json_yaml.rs  jsonpath.rs  jwt.rs  mod.rs  number_base.rs  regex.rs  timestamp.rs  url.rs  uuid.rs  xml.rs
src/components/: command-palette.tsx  error-boundary.tsx  tool-context.ts  tool-workbench.tsx
src/components/ai/: tool-ai.tsx
src/components/layout/: app-layout.tsx  sidebar.tsx  title-bar.tsx
src/components/ui/: button.tsx  card.tsx  code-editor.tsx  input.tsx  select.tsx  tabs.tsx
src/hooks/: use-ai-action.ts  use-ai-route.ts  use-global-shortcuts.ts  use-resizable.ts  use-tool-run.ts
src/lib/: ai.ts  monaco-setup.ts  monaco-themes.ts  utils.test.ts  utils.ts
src/registry/: index.ts  registry.test.ts  types.ts
src/stores/: ai-store.ts  prefill-store.ts  theme-store.ts  tool-store.ts
src/tools/base64/: base64.tsx  meta.ts
src/tools/case-convert/: case-convert.tsx  meta.ts
src/tools/color-convert/: color-convert.tsx  meta.ts
src/views/: home.tsx  settings-ai.tsx  settings.tsx  tool-host.tsx
(+30 files in other folders)
