[package]
name = "facet"
version = "0.1.0"
description = "Facet — a developer's toolbox"
authors = ["xiaoshicae"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "facet"

[lib]
name = "facet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
base64 = "0.22"
quick-xml = "0.36"
regex = "1"
urlencoding = "2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
serde_json_path = "0.7"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
